--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -35,7 +35,7 @@
   opacity: 0;
 }
 
-.navbar-top button {
+.navbar-top-right button {
     background-color: #c00;
     color: #fff;
     border: none;
