--- a/src/styles/ProductDetail.css
+++ b/src/styles/ProductDetail.css
@@ -54,26 +54,28 @@
   flex: 1 1 400px;
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: 5px;
 }
 
 .right-column h2 {
   font-size: 28px;
-  margin-bottom: 12px;
+  margin: 0px;
   font-weight: 700;
+
 }
 
 .info-row {
   display: flex;
+  font-weight: 500;
   justify-content: last baseline;
   font-size: 14px;
   line-height: 1.5;
   gap: 70px;
-  color: #555;
+  color: #000000;
 }
 
 .highlight {
-  color: #007bff;
+  color: #f93737;
   font-weight: 600;
 }
 
@@ -104,7 +106,11 @@
   gap: 12px;
   font-weight: 700;
   font-size: 22px;
-  color: #d32f2f;
+  margin-bottom: 10px;
+}
+
+.price-row .price {
+    color: #d32f2f;
 }
 
 .original-price {
