--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+html, body, #root {
+    width: 100%;
+}
+
+
 a {
   font-weight: 500;
   color: #646cff;
