--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
 
 html, body, #root {
     width: 100%;
+    overflow-x: hidden
 }
 
 
@@ -31,7 +32,7 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  width: auto;
+
 
   min-width: 320px;
   min-height: 100vh;
